--- a/backend/Anchor.toml
+++ b/backend/Anchor.toml
@@ -5,14 +5,14 @@ seeds = true
 skip-lint = false
 
 [programs.localnet]
-backend = "9PCZFZ1gd2g9q5zUaKtaDs14TVGyBhiLeS6DZtF1g9ZC"
+backend = "6Dz1KhuyqPKh4MmVjsNXKY12BuihenzcHM6jfwd8jMSG"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
 cluster = "Localnet"
-wallet = "/home/learner123/.config/solana/id.json"
+wallet = "/mnt/c/Users/THANHPHAT/Documents/solana_TEEN_TITANS/solana_key/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
